feat: add notification service
Add Apache Kafka as a dependency. The code covered with tests.

--- a/backend/notification-service/Dockerfile
+++ b/backend/notification-service/Dockerfile
@@ -5,20 +5,20 @@ COPY go.work go.work.sum ./
 COPY api-gateway/go.mod api-gateway/go.sum ./api-gateway/
 COPY auth-service/go.mod auth-service/go.sum ./auth-service/
 COPY essay-service/go.mod essay-service/go.sum ./essay-service/
-COPY notification-service/go.mod notification-service/go.sum ./notification-service/
+COPY review-service/go.mod review-service/go.sum ./review-service/
 COPY proto ./proto
 COPY shared ./shared
-COPY review-service/go.mod review-service/go.sum ./review-service/
+COPY notification-service/go.mod notification-service/go.sum ./notification-service/
 
 RUN go work sync
 
-COPY review-service ./review-service
+COPY notification-service ./notification-service
 
-WORKDIR /app/review-service
+WORKDIR /app/notification-service
 RUN CGO_ENABLED=0 GOOS=linux go build -o service-binary ./cmd/server/main.go
 
 FROM alpine:3.21
 WORKDIR /app
-COPY --from=builder /app/review-service/service-binary .
+COPY --from=builder /app/notification-service/service-binary .
 
 ENTRYPOINT ["./service-binary"]
