--- a/backend/essay-service/Dockerfile
+++ b/backend/essay-service/Dockerfile
@@ -4,11 +4,11 @@ WORKDIR /app
 COPY go.work go.work.sum ./
 COPY api-gateway/go.mod api-gateway/go.sum ./api-gateway/
 COPY auth-service/go.mod auth-service/go.sum ./auth-service/
+COPY notification-service/go.mod notification-service/go.sum ./notification-service/
 COPY review-service/go.mod review-service/go.sum ./review-service/
 COPY proto ./proto
 COPY shared ./shared
-#COPY essay-service/go.mod essay-service/go.sum ./essay-service/
-COPY essay-service/go.mod ./essay-service/
+COPY essay-service/go.mod essay-service/go.sum ./essay-service/
 
 RUN go work sync
 
