--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,12 +42,15 @@ services:
       AUTH_SERVICE_GRPC_PORT: 50051
       ESSAY_SERVICE_GRPC_PORT: 50052
       REVIEW_SERVICE_GRPC_PORT: 50053
+      NOTIFICATIONS_SERVICE_GRPC_PORT: 50054
     depends_on:
       auth-service:
         condition: service_started
       essay-service:
         condition: service_started
       review-service:
+        condition: service_started
+      notification-service:
         condition: service_started
     networks:
       - app-network
@@ -89,10 +92,56 @@ services:
       dockerfile: review-service/Dockerfile
     environment:
       REVIEW_SERVICE_GRPC_PORT: 50053
+      KAFKA_BROKERS: kafka:9092
     env_file: .env # postgres secrets
     depends_on:
       migrations:
         condition: service_completed_successfully
+    networks:
+      - app-network
+
+  notification-service:
+    build:
+      context: ./backend
+      dockerfile: notification-service/Dockerfile
+    environment:
+      NOTIFICATIONS_SERVICE_GRPC_PORT: 50054
+      KAFKA_BROKERS: kafka:9092
+    env_file: .env # postgres secrets
+    depends_on:
+      migrations:
+        condition: service_completed_successfully
+      kafka:
+        condition: service_healthy
+    networks:
+      - app-network
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - app-network
+
+  kafka:
+    image: confluentinc/cp-kafka:7.4.0
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+    healthcheck:
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "kafka:9092", "--list"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    ports:
+      - "9092:9092"
     networks:
       - app-network
 
