--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,6 +43,8 @@ services:
       ESSAY_SERVICE_GRPC_PORT: 50052
       REVIEW_SERVICE_GRPC_PORT: 50053
       NOTIFICATIONS_SERVICE_GRPC_PORT: 50054
+      MONITORING_PORT: 9090
+    env_file: .env # JWT secrets
     depends_on:
       auth-service:
         condition: service_started
@@ -63,6 +65,7 @@ services:
       dockerfile: auth-service/Dockerfile
     environment:
       AUTH_SERVICE_GRPC_PORT: 50051
+      MONITORING_PORT: 9090
     env_file: .env # JWT and postgres secrets
     depends_on:
       migrations:
@@ -77,6 +80,7 @@ services:
     environment:
       ESSAY_SERVICE_GRPC_PORT: 50052
       REVIEW_SERVICE_GRPC_PORT: 50053
+      MONITORING_PORT: 9090
     env_file: .env # postgres secrets
     depends_on:
       migrations:
@@ -93,6 +97,7 @@ services:
     environment:
       REVIEW_SERVICE_GRPC_PORT: 50053
       KAFKA_BROKERS: kafka:9092
+      MONITORING_PORT: 9090
     env_file: .env # postgres secrets
     depends_on:
       migrations:
@@ -107,6 +112,7 @@ services:
     environment:
       NOTIFICATIONS_SERVICE_GRPC_PORT: 50054
       KAFKA_BROKERS: kafka:9092
+      MONITORING_PORT: 9090
     env_file: .env # postgres secrets
     depends_on:
       migrations:
@@ -155,8 +161,41 @@ services:
     networks:
       - app-network
 
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus:/etc/prometheus
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    networks:
+      - app-network
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+    - "3000:3000"
+    environment:
+    - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+    - ./monitoring/grafana:/etc/grafana/provisioning
+    - grafana_data:/var/lib/grafana
+    depends_on:
+    - prometheus
+    networks:
+    - app-network
+
 volumes:
   postgres_data:
+  prometheus_data:
+  grafana_data:
 
 networks:
   app-network:
